// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Autocomplete component when articles are NOT passed should match snapshot 1`] = `<React.Fragment />`;

exports[`Autocomplete component when articles are passed should match snapshot 1`] = `
<div
  className="input-suggestion"
  style={Object {}}
>
  <a
    className="search-link"
    href="/search?query=undefined"
  >
    See all result
  </a>
</div>
`;

exports[`Autocomplete component when renderItems prop is called When item is NOT highlighted should match snapshot 1`] = `
<div
  style={
    Object {
      "backgroundColor": "transparent",
      "borderBottomWidth": "1px",
      "borderColor": "grey",
      "borderStyle": "solid",
      "borderWidth": "0px",
      "marginBottom": "4px",
      "marginLeft": "20px",
      "marginRight": "20px",
      "marginTop": "4px",
    }
  }
>
  Elon Musk
</div>
`;

exports[`Autocomplete component when renderItems prop is called When item is highlighted should match snapshot 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#eee",
      "borderBottomWidth": "1px",
      "borderColor": "grey",
      "borderStyle": "solid",
      "borderWidth": "0px",
      "marginBottom": "4px",
      "marginLeft": "20px",
      "marginRight": "20px",
      "marginTop": "4px",
    }
  }
>
  Elon Musk
</div>
`;

exports[`Autocomplete component without props should match snapshot 1`] = `
<Autocomplete
  autoHighlight={true}
  getItemValue={[Function]}
  inputProps={
    Object {
      "placeholder": "Input text here...",
    }
  }
  isItemSelectable={[Function]}
  menuStyle={
    Object {
      "background": "rgba(255, 255, 255, 0.9)",
      "borderRadius": "3px",
      "boxShadow": "0 2px 12px rgba(0, 0, 0, 0.1)",
      "fontSize": "90%",
      "maxHeight": "50%",
      "overflow": "auto",
      "padding": "2px 0",
      "position": "fixed",
    }
  }
  onChange={[Function]}
  onMenuVisibilityChange={[Function]}
  onSelect={[Function]}
  renderInput={[Function]}
  renderItem={[Function]}
  renderMenu={[Function]}
  selectOnBlur={false}
  value=""
  wrapperProps={Object {}}
  wrapperStyle={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "margin": "32px",
      "width": "100%",
    }
  }
/>
`;
